appId: com.teachmeprint.language
---
- tapOn: "I speak"
- tapOn: "Armenian"
- tapOn: "SELECT"
- back
